--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
     "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^8.1.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.0",
+    "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.1.10",
     "web-vitals": "^1.1.2"
   },
