--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "http://dev74.onlinetestingserver.com/yakhi/user/",
-
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
@@ -11,6 +10,7 @@
     "axios": "^0.24.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-awesome-loaders": "^0.1.37",
     "react-datepicker": "^4.3.0",
     "react-dom": "^17.0.2",
     "react-paginate": "^8.0.0",
