--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-awesome-loaders": "^0.1.37",
     "react-datepicker": "^4.3.0",
     "react-dom": "^17.0.2",
+    "react-loading-skeleton": "^3.1.0",
     "react-paginate": "^8.0.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
