--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-signature-canvas": "^1.0.6",
     "react-slick": "^0.28.1",
     "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^8.1.0",
@@ -26,6 +27,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.0",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.5.1",
     "sweetalert2": "^11.1.10",
     "web-vitals": "^1.1.2"
   },
