--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "react-dom": "^17.0.2",
     "react-loading-skeleton": "^3.1.0",
     "react-paginate": "^8.0.0",
+    "react-paypal-button-v2": "^2.6.3",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-signature-canvas": "^1.0.6",
     "react-slick": "^0.28.1",
+    "react-square-web-payments-sdk": "2.2.3",
     "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^8.1.0",
     "redux": "^4.1.2",
