--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-loading-skeleton": "^3.1.0",
     "react-paginate": "^8.0.0",
     "react-paypal-button-v2": "^2.6.3",
+    "react-phone-input-2": "^2.15.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
