--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "html-to-react": "^1.4.8",
+    "jquery": "^3.6.1",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-awesome-loaders": "^0.1.37",
