--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-awesome-loaders": "^0.1.37",
+    "react-calendar": "^4.0.0",
     "react-datepicker": "^4.3.0",
     "react-dom": "^17.0.2",
     "react-loading-skeleton": "^3.1.0",
