--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://dev74.onlinetestingserver.com/yakhi/user/",
+  "homepage": "https://yahkiawakened.store/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
@@ -18,6 +18,7 @@
     "react-calendar": "^4.0.0",
     "react-datepicker": "^4.3.0",
     "react-dom": "^17.0.2",
+    "react-https-redirect": "^1.1.0",
     "react-loading-skeleton": "^3.1.0",
     "react-paginate": "^8.0.0",
     "react-paypal-button-v2": "^2.6.3",
