--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-calendar": "^4.0.0",
     "react-datepicker": "^4.3.0",
     "react-dom": "^17.0.2",
+    "react-fancybox": "^0.2.5",
     "react-https-redirect": "^1.1.0",
     "react-loading-skeleton": "^3.1.0",
     "react-paginate": "^8.0.0",
@@ -32,6 +33,7 @@
     "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^8.1.0",
     "redux": "^4.1.2",
+    
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.0",
     "slick-carousel": "^1.8.1",
