--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^8.1.0",
     "redux": "^4.1.2",
-    
+    "country-state-city": "1.0.4",
+
+    "react-places-autocomplete": "^7.3.0",
+
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.0",
     "slick-carousel": "^1.8.1",
