--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-signature-canvas": "^1.0.6",
+    "react-select": "^5.2.1",
+
     "react-slick": "^0.28.1",
     "react-square-web-payments-sdk": "2.2.3",
     "react-stripe-checkout": "^2.6.3",
