--- a/package.json
+++ b/package.json
@@ -10,37 +10,40 @@
     "axios": "^0.24.0",
     "b64-to-blob": "^1.2.19",
     "blueimp-canvas-to-blob": "^3.29.0",
+    "country-state-city": "1.0.4",
     "html-to-react": "^1.4.8",
     "jquery": "^3.6.1",
+    "lodash.range": "^3.2.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-acceptjs": "^0.3.0",
+    "react-authorize-net": "^0.5.7",
     "react-awesome-loaders": "^0.1.37",
     "react-calendar": "^4.0.0",
+    "react-credit-card-input": "^1.1.5",
     "react-datepicker": "^4.3.0",
     "react-dom": "^17.0.2",
     "react-fancybox": "^0.2.5",
     "react-https-redirect": "^1.1.0",
+    "react-lazy-load-image-component": "^1.5.6",
     "react-loading-skeleton": "^3.1.0",
     "react-paginate": "^8.0.0",
     "react-paypal-button-v2": "^2.6.3",
     "react-phone-input-2": "^2.15.1",
+    "react-places-autocomplete": "^7.3.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "react-signature-canvas": "^1.0.6",
     "react-select": "^5.2.1",
-
+    "react-signature-canvas": "^1.0.6",
     "react-slick": "^0.28.1",
     "react-square-web-payments-sdk": "2.2.3",
     "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^8.1.0",
     "redux": "^4.1.2",
-    "country-state-city": "1.0.4",
-
-    "react-places-autocomplete": "^7.3.0",
-
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.0",
+    "sezzle-react-widget": "^1.0.1-beta",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.5.1",
     "sweetalert2": "^11.1.10",
