--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-paypal-button-v2": "^2.6.3",
     "react-phone-input-2": "^2.15.1",
     "react-places-autocomplete": "^7.3.0",
+    "react-player": "^2.11.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
